syntax = "proto3";

import "google/protobuf/empty.proto";

package tappd;

service Tappd {
  // Derives a cryptographic key from the specified key path.
  // Returns the derived key along with its certificate chain.
  rpc DeriveKey(DeriveKeyArgs) returns (DeriveKeyResponse) {}

  // Generates a TDX quote
  rpc TdxQuote(TdxQuoteArgs) returns (TdxQuoteResponse) {}

  // Generates a TDX quote with raw report data.
  // This is a low-level API that should be used with caution.
  // When using quotes in multiple locations within your application,
  // ensure proper quote differentiation by including a content type
  // identifier in the report_data to avoid Quote Repurposing Attacks.
  rpc RawQuote(RawQuoteArgs) returns (TdxQuoteResponse) {}

  // Get worker info
  rpc Info(google.protobuf.Empty) returns (WorkerInfo) {}
}

// The request to derive a key
message DeriveKeyArgs {
  // Path to the key to derive
  string path = 1;
  // Subject of the certificate to request
  string subject = 2;
  // DNS alternative names for the certificate
  repeated string alt_names = 3;
}

// The response to a DeriveKey request
message DeriveKeyResponse {
  // Derived key
  string key = 1;
  // Certificate chain
  repeated string certificate_chain = 2;
  // Derived k256 key
  bytes k256_key = 3;
  // Derived k256 signature chain
  repeated bytes k256_signature_chain = 4;
}

// The request to get a TDX quote
// The report data is prefixed with `app-data:` before hashing unless the algorithm is `raw`.
// Final report data is hash(`app-data:` + report_data) if the algorithm is not `raw`.
message TdxQuoteArgs {
  // Report data
  bytes report_data = 1;
  // The hash algorithm to use to process the report data. Default is `sha512`.
  // Supported algorithms are:
  // - `sha256`
  // - `sha384`
  // - `sha512`
  // - `sha3-256`
  // - `sha3-384`
  // - `sha3-512`
  // - `keccak256`
  // - `keccak384`
  // - `keccak512`
  // - `raw`: Passes the report_data directly to the driver without any processing
  string hash_algorithm = 2;

  // Custom prefix to prepend to report data before hashing.
  // Defaults to 'app-data:' when hash_algorithm is not 'raw'.
  string prefix = 3;
}

// The request to get a raw TDX quote
message RawQuoteArgs {
  // 64 bytes of report data
  bytes report_data = 1;
}

message TdxQuoteResponse {
  // TDX quote
  bytes quote = 1;
  // Event log
  string event_log = 2;

  // The following fields might be used for app debugging purposes
  // Hash algorithm used to hash the caller passed in report data
  string hash_algorithm = 3;
  // Prefix added to the report data before hashing
  string prefix = 4;
}

// The request to derive a key
message WorkerInfo {
  // App ID
  bytes app_id = 1;
  // App Instance ID
  bytes instance_id = 2;
  // App certificate
  string app_cert = 3;
  // TCB info
  string tcb_info = 4;
  // App name
  string app_name = 5;
  // Whether the app logs are public
  bool public_logs = 6;
  // Whether the app sysinfo is public
  bool public_sysinfo = 7;
  // Device ID
  bytes device_id = 8;
  // MR Enclave
  bytes mr_enclave = 9;
  // MR Image
  bytes mr_image = 10;
}

// The response to a WorkerInfo request
message WorkerVersion {
  // Tappd version
  string version = 1;
  // Git revision
  string rev = 2;
}

service Worker {
  // Get worker info
  rpc Info(google.protobuf.Empty) returns (WorkerInfo) {}
  // Get tappd version
  rpc Version(google.protobuf.Empty) returns (WorkerVersion) {}
}
